Add k-HDTCat to HDTCat-Tree